<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">What\'s the Movie</string>

    <!--nav_drawer_menu -->
    <string name="title_cadastrar_filmes">Cadastrar Filmes</string>
    <string name="title_listar_filmes">Listar Filmes</string>
    <string name="sobre">Sobre</string>

    <!-- exceções -->
    <string name="salvarDadoErrorMenssagem">Erro ao salvar o registro</string>
    <string name="deletarDadoErrorMessage">Erro ao deletar o registro</string>

    <!-- recycle views -->
    <string name="listaVazia">Nenhum filme cadastrado no momento</string>

    <!-- feedbacks -->
    <string name="filmeNaoEncontrado">Filme não encontrato</string>
    <string name="filmeJaCadastrado">Filme já estava cadastrado</string>
    <string name="filmeCadastroSucesso">Filme cadastrado com sucesso</string>
    <string name="semConexao">Não é possivel cadastrar porque o dispositivo não possui conexão com internet</string>
    <string name="siteIndisponivel">Desculpe, site Indisponivel</string>

    <!-- alerta dialog -->
    <string name="alert_sair">Sair</string>
    <string name="alert_mensagem">Você realmente quer fechar o aplicativo?</string>
    <string name="alert_sim">Sim</string>
    <string name="alert_nao">Não</string>
    <string name="alert_mensagem_internet">Foi detectado que seu dispositivo não está conectado a internet, verifique sua conexão. Mas ainda é possível usar o aplicativo</string>
    <string name="alert_aviso">Atenção</string>
    <string name="ok">OK</string>
    <string name="alert_buscar">Buscar</string>

    <!-- progressDialog tasks -->
    <string name="progress_aguarde">Aguarde...</string>
    <string name="progress_conectando">Se conectando ao Servidor</string>
    <string name="progress_tentativas">tentativas</string>
    <string name="progress_recebendo">Recebendo dados do Servidor</string>
    <string name="progress_falha">Desculpe o transtorno! Verifique sua conexão. Se o problema persistir, nosso servidor pode está com problemas. Mas ainda é possível usar o aplicativo!</string>
    <string name="progress_fechar">Fechar</string>

    <!-- Fragment detalhe -->
    <string name="descricao">Descrição</string>
    <string name="genero">Gênero</string>
    <string name="dataLancamento">Data de Lançamento</string>
    <string name="duracao">Duração</string>
    <string name="premios">Premiações</string>
    <string name="nota">Nota</string>
    <string name="producao">Produção</string>
    <string name="paginaWeb">Site</string>

    <!-- Hints -->
    <string name="hint_cadastrarFIlme">Digite aqui o filme a ser cadastrado</string>

</resources>
